# ownpulse

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .sops.yaml  AGENTS.md  CLAUDE.md  README.md  backend-coverage.json  web-coverage.json
.claude/: CLAUDE.md  settings.json
.github/workflows/: backend.yml  deploy-production.yml  deploy-staging.yml  deploy.yml  design-tokens.yml  helm-preview.yml  ios.yml  userdocs.yml  web.yml
backend/: .dockerignore  AGENTS.md  Dockerfile
backend/api/: Cargo.toml
backend/api/src/: config.rs  crypto.rs  email.rs  error.rs  lib.rs  main.rs  migrate.rs  migration_check.rs  observability.rs  stats.rs
backend/api/src/auth/: extractor.rs  jwt.rs  mod.rs  refresh.rs
backend/api/src/db/: audit.rs  checkins.rs  explore.rs  explore_charts.rs  feature_flags.rs  friend_shares.rs  genetics.rs  health_records.rs  healthkit.rs  insights.rs  integration_tokens.rs  interventions.rs  invites.rs  lab_results.rs  mod.rs  observations.rs  observer_polls.rs  password_reset_tokens.rs  protocols.rs  refresh_tokens.rs  saved_medicines.rs  sleep.rs  snp_seed.rs  source_preferences.rs  stats.rs  telemetry.rs  user_auth_methods.rs  users.rs
backend/api/src/export/: csv.rs  json.rs  mod.rs
backend/api/src/genetics/: ancestrydna.rs  interpret.rs  mod.rs  parser.rs  twentythreeandme.rs  vcf.rs
backend/api/src/integrations/: apple.rs  garmin.rs  google.rs  google_calendar.rs  mod.rs  mychart.rs  oura.rs
backend/api/src/jobs/: garmin_sync.rs  insight_generator.rs  mod.rs  mychart_sync.rs  oura_sync.rs
backend/api/src/models/: checkin.rs  event.rs  explore.rs  feature_flag.rs  friend_share.rs  genetics.rs  health_record.rs  healthkit.rs  insight.rs  intervention.rs  invite.rs  lab_result.rs  mod.rs  observation.rs  observer_poll.rs  protocol.rs  saved_medicine.rs  sleep.rs  source_preference.rs  stats.rs  telemetry.rs  user.rs
backend/api/src/routes/: account.rs  admin.rs  audit.rs  auth.rs  checkins.rs  config.rs  dashboard.rs  events.rs  explore.rs  export.rs  friends.rs  garmin.rs  genetics.rs  health_records.rs  healthkit.rs  insights.rs  integrations.rs  interventions.rs  labs.rs  mod.rs  mychart.rs  observations.rs  observer_polls.rs  oura.rs  protocols.rs  saved_medicines.rs  sleep.rs  source_preferences.rs  sources.rs  stats.rs  telemetry.rs  waitlist.rs
backend/api/src/routes/v2/: mod.rs
backend/api/tests/: migration_safety.rs
backend/api/tests/contract/: common.rs  main.rs
backend/api/tests/fixtures/garmin/: body-comp.json  daily-summary.json  hrv.json  sleep.json
backend/api/tests/fixtures/genetics/: test_23andme.txt  test_ancestry.txt
backend/api/tests/fixtures/mychart/: diagnostic-report.json  observation-bundle.json
backend/api/tests/fixtures/oura/: daily-activity.json  daily-readiness.json  daily-sleep.json  heart-rate.json
backend/api/tests/integration/: account.rs  admin_invites.rs  admin_invites_extended.rs  admin_promote.rs  audit.rs  auth.rs  auth_multi.rs  checkins.rs  common.rs  cors.rs  explore.rs  export.rs  feature_flags.rs  friends.rs  genetics.rs  health_records.rs  healthkit.rs  insights.rs  integrations.rs  interventions.rs  labs.rs  main.rs  metrics.rs  mychart.rs  observations.rs  observer_polls.rs  password_reset.rs  protocol_runs.rs  protocol_templates.rs  protocols.rs  saved_medicines.rs  security_fixes.rs  sleep.rs  sources.rs  stats.rs  telemetry.rs  versioning.rs  waitlist.rs
db/migrations/: 0001_init.sql  0002_waitlist.sql  0003_auth_provider.sql  0004_audit_log.sql  0004_sleep_records.sql  0005_refresh_token_family.sql  0006_roles_and_sharing.sql  0007_row_level_security.sql  0008_email_login.sql  0009_friend_share_declined_status.sql  0010_invites_and_user_status.sql  (+22 more)
docs/: README.md  security.md
ios/: AGENTS.md  project.yml
ops/: asc_client.py  diag-crashes.sh
schema/: open-schema.json  open-schema.md
userdocs/: Dockerfile  Makefile  mkdocs.yml  nginx.conf
web/: AGENTS.md  Dockerfile  biome.json  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+643 files in other folders)
