[package]
name = "api"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "chrono", "uuid"] }
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
bcrypt = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
envy = "0.4"
thiserror = "1"
tower-http = { version = "0.5", features = ["cors", "trace"] }

[dev-dependencies]
testcontainers = "0.20"
testcontainers-modules = { version = "0.7", features = ["postgres"] }
wiremock = "0.6"
fake = "2.9"
rstest = "0.22"
tokio-test = "0.4"
