[package]
name = "api"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "uuid"] }
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
bcrypt = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
envy = "0.4"
futures = "0.3"
anyhow = "1"
thiserror = "1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
axum-prometheus = "0.7"
tower_governor = "0.4"
urlencoding = "2"

[dev-dependencies]
base64 = "0.22"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
wiremock = "0.6"
fake = "2.9"
rstest = "0.22"
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
http = "1"
hyper = "1"

