[package]
name = "api"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono", "uuid"] }
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
bcrypt = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "registry"] }
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
tonic = { version = "0.14", features = ["transport", "tls-ring"] }
tracing-opentelemetry = "0.32"
envy = "0.4"
futures = "0.3"
anyhow = "1"
thiserror = "1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
axum-prometheus = "0.7"
tower_governor = "0.4"
urlencoding = "2"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport"] }
rand = "0.8"
async-stream = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"
regex = "1"

[dev-dependencies]
base64 = "0.22"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
wiremock = "0.6"
fake = "2.9"
rstest = "0.22"
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
http = "1"
hyper = "1"
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"
pact_verifier = "1.3"
pact_models = "1.3"
async-trait = "0.1"
bytes = "1"
itertools = "0.14"
